--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,13 @@
 languages:
   - C++: true
-  - C#: true
+  - csharp: true
+  - Javascript: true
+  - XML: true
+  - Python: true
+  - C: true
+  - HTML: true
+  - shell script: true
+  - CSS: true
+  - Java: true
   solution:
   - userAuth.cpl.sln
